--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Here you can see my freelance design work for different design studios.</p>
     </div>
     <div class="contenedor-grid">
-        <div><img class="grid-img-1" src="multimedia/latitud/33.jpg" alt="Latitud 33 Packaging"></div>
+        <div><a href="./pages/packaging/latitud.html"><img class="grid-img-1" src="multimedia/latitud/33.jpg" alt="Latitud 33 Packaging"></a></div>
         <div><img class="grid-img-2" src="multimedia/rplnish/rplnish.jpg" alt="Rplnish Print"></div>
         <div><img class="grid-img-3" src="multimedia/chandon/chandon.jpg" alt="Chandon Packaging"></div>
         <div><img class="grid-img-4" src="multimedia/truketo/truketo.jpg" alt="TruKeto Packaging"></div>
