--- a/pages/print/print.html
+++ b/pages/print/print.html
@@ -7,36 +7,36 @@
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
     <!--banner principal-->
   <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html"><img src="/multimedia/ikon_lo.png" alt="ikon"></a>
+          <a class="navbar-brand" href="../../index.html"><img src="../../multimedia/ikon_lo.png" alt="ikon"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">All</a>
+                <a class="nav-link" href="../../index.html">All</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/logo/logo.html">Logo</a>
+                <a class="nav-link" href="../logo/logo.html">Logo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/packaging/packaging.html">Packaging</a>
+                <a class="nav-link" href="../packaging/packaging.html">Packaging</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page"" href="/pages/print/print.html">Print</a>
+                <a class="nav-link active" aria-current="page" href="../print/print.html">Print</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/about.html">About me</a>
+                <a class="nav-link" href="../about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contact.html">Contact</a>
+                <a class="nav-link" href="../contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -46,8 +46,8 @@
   <!--contenido principal-->
   <main>
     <div class="contenedor-grid-print">
-        <div><img class="grid-img-1" src="/multimedia/rplnish/rplnish.jpg" alt="Rplnish"></div>
-        <div><img class="grid-img-2" src="/multimedia/kf/kf.jpg" alt="Knight Foundation"></div>
+        <div><img class="grid-img-1" src="../../multimedia/rplnish/rplnish.jpg" alt="Rplnish"></div>
+        <div><img class="grid-img-2" src="../../multimedia/kf/kf.jpg" alt="Knight Foundation"></div>
     </div>
   </main>
   <!--Pie de pagina-->
