cambios links navbar, centrado img grid Packaging y Print

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,19 +24,19 @@
                   <a class="nav-link" href="../index.html">All</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/logo/logo.html">Logo</a>
+                  <a class="nav-link" href="./logo/logo.html">Logo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/packaging/packaging.html">Packaging</a>
+                  <a class="nav-link" href="./packaging/packaging.html">Packaging</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/print/print.html">Print</a>
+                  <a class="nav-link" href="./print/print.html">Print</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="about.html">About me</a>
+                  <a class="nav-link active" aria-current="page" href="./about.html">About me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/contact.html">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -53,7 +53,7 @@
             <div class="titulo-about">
                 <h2>Gonzalo Rigaldo</h2>
             </div>
-            <div class="sutitulo-about">
+            <div class="subtitulo-about">
                 <h3>Graphic Designer</h3>
             </div>
             <div>
