--- a/pages/logo/logo.html
+++ b/pages/logo/logo.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="../../index.html">All</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page"" href="logo.html">Logo</a>
+                <a class="nav-link active" aria-current="page"" href="./logo.html">Logo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../packaging/packaging.html">Packaging</a>
@@ -33,10 +33,10 @@
                 <a class="nav-link" href="../print/print.html">Print</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../pages/about.html">About me</a>
+                <a class="nav-link" href="../about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../pages/contact.html">Contact</a>
+                <a class="nav-link" href="../contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -46,8 +46,8 @@
   <!--contenido principal-->
   <main>
     <div class="contenedor-grid-logo">
-        <div><img class="grid-img-1" src="../../multimedia/pain/The Pain Cave LO-01.png" alt="Dope Scooters Packaging"></div>
-        <div><img class="grid-img-2" src="../../multimedia/lymbo/lymbo.png" alt="Lymbo Packaging"></div>
+        <div><img class="grid-img1" src="../../multimedia/pain/The Pain Cave LO-01.png" alt="Dope Scooters Packaging"></div>
+        <div><img class="grid-img2" src="../../multimedia/lymbo/lymbo.png" alt="Lymbo Packaging"></div>
     </div>
   </main>
   <!--Pie de pagina-->
