--- a/pages/packaging/latitud.html
+++ b/pages/packaging/latitud.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="../logo/logo.html">Logo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"" href="./packaging.html">Packaging</a>
+                    <a class="nav-link active" aria-current="page"" href="packaging.html">Packaging</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../print/print.html">Print</a>
