--- a/pages/print/print.html
+++ b/pages/print/print.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="../packaging/packaging.html">Packaging</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../print/print.html">Print</a>
+                <a class="nav-link active" aria-current="page" href="./print.html">Print</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../about.html">About me</a>
