--- a/pages/packaging/packaging.html
+++ b/pages/packaging/packaging.html
@@ -24,19 +24,19 @@
                 <a class="nav-link" href="../../index.html">All</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../pages/logo/logo.html">Logo</a>
+                <a class="nav-link" href="../logo/logo.html">Logo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page"" href="./packaging.html">Packaging</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../pages/print/print.html">Print</a>
+                <a class="nav-link" href="../print/print.html">Print</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../pages/about.html">About me</a>
+                <a class="nav-link" href="../about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../../pages/contact.html">Contact</a>
+                <a class="nav-link" href="../contact.html">Contact</a>
               </li>
             </ul>
           </div>
