creacion de estilos en SASS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <!--banner principal-->
@@ -50,7 +50,8 @@
         <p>Here you can see my freelance design work for different design studios.</p>
     </div>
     <div class="contenedor-grid">
-        <div><a href="./pages/packaging/latitud.html"><img class="grid-img-1" src="multimedia/latitud/33.jpg" alt="Latitud 33 Packaging"></a></div>
+        <div><a href="./pages/packaging/latitud.html"><img class="grid-img-1" src="multimedia/latitud/33.jpg" alt="Latitud 33 Packaging"></a>
+       </div>
         <div><img class="grid-img-2" src="multimedia/rplnish/rplnish.jpg" alt="Rplnish Print"></div>
         <div><img class="grid-img-3" src="multimedia/chandon/chandon.jpg" alt="Chandon Packaging"></div>
         <div><img class="grid-img-4" src="multimedia/truketo/truketo.jpg" alt="TruKeto Packaging"></div>
