--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ikōn - Brand Design</title>
+        <meta name="keywords" content="Graphic, Design, Logo, Packaging, Print, Studio, Freelancer, Diseño, Branding, Identidad, Designer, Diseñador, Contacto, Contact, Formulario, Work, Mensaje">
+        <meta name="description" content="Hello! If you liked my work, contact me to tell me about yourself. I will be very happy to listen to you and provide you with the best solutions for your design needs.">
         <!--link bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!--link css-->
@@ -74,7 +76,7 @@
   <!--Pie de pagina-->
   <footer>
     <div class="footer-main">
-        <h2>ikōn</h2>
+        <h1>ikōn</h1>
         <p class="contact-footer">I'm a freelance designer, I love good things and great design.<br>
         Say hello to me <a href="mailto:hello@ikon.com.ar">hello@ikon.com.ar</a></p>
     </div>
