--- a/pages/logo/logo.html
+++ b/pages/logo/logo.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikōn - Brand Design</title>
+    <meta name="keywords" content="Design, Diseño, Freelance, Logotipo, Logo, Marca, Identidad, Branding, Brand, Isotipo, Symbol, Imagen, Tipografía, Typo">
+    <meta name="description" content="Creation and communication of brand identity. I work as a team with the client to design an image that communicates their personality and allows direct communication with people.">
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
@@ -45,54 +47,74 @@
   </header>
   <!--contenido principal-->
   <main>
+    <div class="contenedor-welcome">
+      <h1>Hello!</h1>
+      <p>Here you can see my freelance design work for different design studios.</p>
+    </div>
     <div class="contenedor-grid-logo">
         <div class="miniatura"><img class="grid-img1" src="../../multimedia/pain/The Pain Cave LO-01.png" alt="Dope Scooters Packaging">
-          <div class="info">
-            <h2>The Pain Cave</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>The Pain Cave</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img2" src="../../multimedia/lymbo/lymbo.png" alt="Lymbo Packaging">
-          <div class="info">
-            <h2>Lymbo</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Lymbo</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img3" src="../../multimedia/cc/CC.png" alt="Cultures Connection Logo">
-          <div class="info">
-            <h2>Cultures Connection</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Cultures Connection</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img4" src="../../multimedia/kinder/kinder1.jpg" alt="Casa Kinder Logo">
-          <div class="info">
-            <h2>Casa Kinder</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Casa Kinder</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img5" src="../../multimedia/bhse/bhse.png" alt="Banco Hipotecario Seguros Logo">
-          <div class="info">
-            <h2>Banco Hipotecario Seguros</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Banco Hipotecario Seguros</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img6" src="../../multimedia/jd&w/jd&w.png" alt="Jumbo Deli & Wine Logo">
-          <div class="info">
-            <h2>Jumbo Deli & Wine</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Jumbo Deli & Wine</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img7" src="../../multimedia/vendimia/vendimia.jpg" alt="Vendimia 2014 Logo">
-          <div class="info">
-            <h2>Festival Nacional de la Vendimia</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Festival Nacional de la Vendimia</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img8" src="../../multimedia/techconnect/techconnect1.jpg" alt="Techconnect Logo">
-          <div class="info">
-            <h2>Techconnect</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Techconnect</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
     </div>
   </main>
