--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikōn - Brand Design</title>
+    <meta name="keywords" content="Graphic, Design, Logo, Packaging, Print, Studio, Freelancer, Diseño, Branding, Identidad, Designer, Diseñador">
+    <meta name="description" content="Do you need help with your brand? Talented and creative graphic designer with a passion for brands and visual communication. More than 20 years creating design solutions to connect people and their brands.">
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
@@ -59,46 +61,60 @@
           </a>
         </div>
         <div class="miniatura"><img class="grid-img-2" src="multimedia/rplnish/rplnish.jpg" alt="Rplnish Print">
-          <div class="info">
+          <a href="coming-soon.html">
+            <div class="info">
             <h2>Rpln!sh</h2>
             <h3>Print</h3>
-          </div>
+            </div>
+          </a> 
         </div>
         <div class="miniatura"><img class="grid-img-3" src="multimedia/lymbo/lymbo.png" alt="Lymbo Packaging">
-          <div class="info">
-            <h2>Lymbo</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="coming-soon.html">
+            <div class="info">
+              <h2>Lymbo</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-4" src="multimedia/buonob/buonob.jpg" alt="Buono B Packaging">
-          <div class="info">
-            <h2>Buono B</h2>
-            <h3>Packaging</h3>
-          </div>
+          <a href="coming-soon.html">
+            <div class="info">
+              <h2>Buono B</h2>
+              <h3>Packaging</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-5" src="multimedia/vendimia/vendimia.jpg" alt="Vendimia Logo">
-          <div class="info">
+          <a href="coming-soon.html">
+            <div class="info">
             <h2>Festival Nacional de la Vendimia</h2>
             <h3>Logotipo</h3>
-          </div>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-6" src="multimedia/dope/dope.jpg" alt="Dope Scooters Packaging">
-          <div class="info">
-            <h2>Dope Scooters</h2>
-            <h3>Packaging</h3>
-          </div>
+          <a href="coming-soon.html">
+            <div class="info">
+              <h2>Dope Scooters</h2>
+              <h3>Packaging</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-7" src="multimedia/pain/The Pain Cave LO-01.png" alt="The Pain Cave">
-          <div class="info">
-            <h2>The Pain Cave</h2>
-            <h3>Logotipo</h3>
-          </div>
+          <a href="coming-soon.html">
+            <div class="info">
+              <h2>The Pain Cave</h2>
+              <h3>Logotipo</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-8" src="multimedia/kf/kf.jpg" alt="Knight Foundation Print">
-          <div class="info">
-            <h2>Knight Foundation</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="coming-soon.html">
+            <div class="info">
+              <h2>Knight Foundation</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
     </div>
   </main>
