--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikōn - Brand Design</title>
+    <meta name="keywords" content="Graphic, Design, Logo, Packaging, Print, Studio, Freelancer, Diseño, Branding, Identidad, Designer, Diseñador, Background, Know-How, Skills, Mexico, Interbrand, Experiencia">
+    <meta name="description" content="I am a graphic designer from Buenos Aires, Argentina, specialized in brand design and visual communication. I have extensive experience working for small and large companies on a freelance basis and for different branding and packaging studios.">
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
@@ -51,10 +53,10 @@
         </div>
         <div>
             <div class="titulo-about">
-                <h2>Gonzalo Rigaldo</h2>
+                <h1>Gonzalo Rigaldo</h1>
             </div>
             <div class="subtitulo-about">
-                <h3>Graphic Designer</h3>
+                <h2>Graphic Designer</h2>
             </div>
             <div>
                 <p>
@@ -71,7 +73,7 @@
      <!--Pie de pagina-->
     <footer>
         <div class="footer-main">
-            <h2>ikōn</h2>
+            <h3>ikōn</h3>
             <p class="contact-footer">I'm a freelance designer, I love good things and great design.<br>
             Say hello to me <a href="mailto:hello@ikon.com.ar">hello@ikon.com.ar</a></p>
         </div>
