--- a/pages/packaging/latitud.html
+++ b/pages/packaging/latitud.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikōn - Brand Design</title>
+    <meta name="keywords" content="Packaging, Design, Designer, Interbrand, Twinpack, Case, Bottle, Wine, Malbec, Syrah, Chandon, Bodega">
+    <meta name="description" content="Diseño de Twinpack para 2 botellas de varietales Syrah y Malbec Latitud 33º, Bodegas Chandon ">
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
@@ -46,8 +48,8 @@
   <!--contenido principal-->
   <main>
     <div class="contenedor-main">
-        <h2>Latitud 33º</h2>
-        <h3>for Interbrand Argentina</h3>
+        <h1>Latitud 33º</h1>
+        <h2>for Interbrand Argentina</h2>
         <p>Latitud 33° Twinpack case for 2 bottles (1 Malbec, 1 Syrah).</p>
         <img src="../../multimedia/latitud/33_02.jpg" alt="Twinpack front and lateral">
         <img src="../../multimedia/latitud/33_03.jpg" alt="Twinpack front and lateral">
