--- a/pages/packaging/packaging.html
+++ b/pages/packaging/packaging.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikōn - Brand Design</title>
+    <meta name="keywords" content="Design, Diseño, Freelance, Packaging, Pack, Box, Label, Etiquetas, Beverage, Bebidas, Alimentos, Gondola, Shelf, Food, Bags">
+    <meta name="description" content="Research, design and development for your packaging. Image design so that your product stands out on the shelf and differentiates itself from the competition.">
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
@@ -45,6 +47,10 @@
   </header>
   <!--contenido principal-->
   <main>
+    <div class="contenedor-welcome">
+      <h1>Hello!</h1>
+      <p>Here you can see my freelance design work for different design studios.</p>
+    </div>
     <div class="contenedor-grid-packaging">
       <div class="miniatura"><img class="grid-img-1" src="../../multimedia/latitud/33.jpg" alt="Latitud 33 Packaging">
         <a href="./latitud.html">
@@ -55,46 +61,60 @@
         </a>
       </div>
       <div class="miniatura"><img class="grid-img-2" src="../../multimedia/chandon/chandon.jpg" alt="Chandon">
-        <div class="info">
-          <h2>Chandon</h2>
-          <h3>Packaging</h3>
-        </div>
+        <a href="../../coming-soon.html">
+          <div class="info">
+            <h2>Chandon</h2>
+            <h3>Packaging</h3>
+          </div>
+        </a>
       </div>
       <div class="miniatura"><img class="grid-img-3" src="../../multimedia/truketo/truketo.jpg" alt="TruKeto">
-        <div class="info">
-          <h2>Truketo</h2>
-          <h3>Packaging</h3>
-        </div>
+        <a href="../../coming-soon.html">
+          <div class="info">
+            <h2>Truketo</h2>
+            <h3>Packaging</h3>
+          </div>
+        </a>
       </div>
         <div class="miniatura"><img class="grid-img-4" src="../../multimedia/buonob/buonob.jpg" alt="Buono B">
-          <div class="info">
-            <h2>Buono B</h2>
-            <h3>Packaging</h3>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Buono B</h2>
+              <h3>Packaging</h3>
           </div>
+        </a>
         </div>
         <div class="miniatura"><img class="grid-img-5" src="../../multimedia/dope/dope.jpg" alt="Dope Scooters">
-          <div class="info">
-            <h2>Dope Scooters</h2>
-            <h3>Packaging</h3>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Dope Scooters</h2>
+              <h3>Packaging</h3>
           </div>
+        </a>
         </div>
         <div class="miniatura"><img class="grid-img-6" src="../../multimedia/matcha/matcha.jpg" alt="Matcha Tea">
-          <div class="info">
-            <h2>Matcha Tea</h2>
-            <h3>Packaging</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Matcha Tea</h2>
+              <h3>Packaging</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-7" src="../../multimedia/coldt/coldt.jpg" alt="Cold Tea Packaging">
-          <div class="info">
-            <h2>Cold T</h2>
-            <h3>Packaging</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Cold T</h2>
+              <h3>Packaging</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-8" src="../../multimedia/lavirginia/lavirginia.jpg" alt="La Virginia Packaging">
-          <div class="info">
-            <h2>La Virginia</h2>
-            <h3>Packaging</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>La Virginia</h2>
+              <h3>Packaging</h3>
+            </div>
+          </a>
         </div>
     </div>
   </main>
