--- a/pages/print/print.html
+++ b/pages/print/print.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikōn - Brand Design</title>
+    <meta name="keywords" content="Design, Diseño, Freelance, Flyer, Banner, Annual Report, Styleguide, Book design, Brochure, Catalog, Brandguides, Magazines">
+    <meta name="description" content="Custom designs for your printed work. Whether you need a brand manual, the cover and interior of a book, your company's annual report, a poster and communication for your play, the image of your music project, I have the necessary skills to develop the best image for your editorial project.">
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--link css-->
@@ -45,54 +47,74 @@
   </header>
   <!--contenido principal-->
   <main>
-    <div class="contenedor-grid-print">
+  <div class="contenedor-welcome">
+    <h1>Hello!</h1>
+    <p>Here you can see my freelance design work for different design studios.</p>
+  </div>
+  <div class="contenedor-grid-print">
         <div class="miniatura"><img class="grid-img-1" src="../../multimedia/rplnish/rplnish.jpg" alt="Rplnish">
-          <div class="info">
-            <h2>Rpln!sh</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Rpln!sh</h2>
+              <h3>Print</h3>
+            </div>
+          </a> 
         </div>
         <div class="miniatura"><img class="grid-img-2" src="../../multimedia/kf/kf.jpg" alt="Knight Foundation">
-          <div class="info">
-            <h2>Knight Foundation</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Knight Foundation</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-3" src="../../multimedia/cintra/cintra.jpg" alt="Annual report 2005">
-          <div class="info">
-            <h2>Cintra</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Cintra</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-4" src="../../multimedia/fiu/fiu.jpg" alt="Florida International University report">
-          <div class="info">
-            <h2>Florida International University</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Florida International University</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-5" src="../../multimedia/officescrub/officescrub.jpg" alt="Lab Coat Guide">
-          <div class="info">
-            <h2>Officescrub</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Officescrub</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-6" src="../../multimedia/village/village.jpg" alt="Annual Report 2014">
-          <div class="info">
-            <h2>Village Cinemas</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Village Cinemas</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-7" src="../../multimedia/izamal/izamal.jpg" alt="Izamal Tourist Map">
-          <div class="info">
-            <h2>Izamal</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Izamal</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
         <div class="miniatura"><img class="grid-img-8" src="../../multimedia/brujulas/brujulas.jpg" alt="Las Brujulas de la memoria cover">
-          <div class="info">
-            <h2>Las Brújulas de la memoria</h2>
-            <h3>Print</h3>
-          </div>
+          <a href="../../coming-soon.html">
+            <div class="info">
+              <h2>Las Brújulas de la memoria</h2>
+              <h3>Print</h3>
+            </div>
+          </a>
         </div>
     </div>
   </main>
