--- a/coming-soon.html
+++ b/coming-soon.html
@@ -13,9 +13,9 @@
     <section>
         <h1 class="text-center text-dark align-middle " style="font-size: 50px">Coming Soon</h1>
 
-        <a href="javascript:history.back()"><div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
         <img width="35%" src="multimedia/image.svg" alt="little bird whistling">
-        </div></a>
+        </div>
         <div class="d-flex justify-content-center text-center">
             <div class="grid p-2">
                 <p>Days</p><b class="day"></b>
@@ -34,8 +34,7 @@
             <code class="bg-white p-1">This page is under development</code>
         </div>
         <div class="text-center mt-5">
-
-            Contact: <a href="mailto:hello@ikon.com.ar">hello@ikon.com.ar</a>
+            <a href="javascript:history.back()"><img width="130px" src="./multimedia/ikon_lo.png" alt="ikon"></a>
         </div>
     <!-- Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
