--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </a>
         </div>
         <div class="miniatura"><img class="grid-img-2" src="multimedia/rplnish/rplnish.jpg" alt="Rplnish Print">
-          <a href="coming-soon.html">
+          <a href="./pages/print/rplanish.html">
             <div class="info">
             <h2>Rpln!sh</h2>
             <h3>Print</h3>
@@ -69,7 +69,7 @@
           </a> 
         </div>
         <div class="miniatura"><img class="grid-img-3" src="multimedia/lymbo/lymbo.png" alt="Lymbo Packaging">
-          <a href="coming-soon.html">
+          <a href="./pages/logo/lymbo.html">
             <div class="info">
               <h2>Lymbo</h2>
               <h3>Logotipo</h3>
@@ -77,17 +77,17 @@
           </a>
         </div>
         <div class="miniatura"><img class="grid-img-4" src="multimedia/buonob/buonob.jpg" alt="Buono B Packaging">
-          <a href="coming-soon.html">
+          <a href="./pages/packaging/buonob.html">
             <div class="info">
-              <h2>Buono B</h2>
+              <h2>Buono B.</h2>
               <h3>Packaging</h3>
             </div>
           </a>
         </div>
         <div class="miniatura"><img class="grid-img-5" src="multimedia/vendimia/vendimia.jpg" alt="Vendimia Logo">
-          <a href="coming-soon.html">
+          <a href="./pages/logo/vendimia.html">
             <div class="info">
-            <h2>Festival Nacional de la Vendimia</h2>
+            <h2>Fiesta Nacional de la Vendimia 2014</h2>
             <h3>Logotipo</h3>
             </div>
           </a>
