--- a/pages/logo/logo.html
+++ b/pages/logo/logo.html
@@ -61,7 +61,7 @@
           </a>
         </div>
         <div class="miniatura"><img class="grid-img2" src="../../multimedia/lymbo/lymbo.png" alt="Lymbo Packaging">
-          <a href="../../coming-soon.html">
+          <a href="./lymbo.html">
             <div class="info">
               <h2>Lymbo</h2>
               <h3>Logotipo</h3>
@@ -101,9 +101,9 @@
           </a>
         </div>
         <div class="miniatura"><img class="grid-img7" src="../../multimedia/vendimia/vendimia.jpg" alt="Vendimia 2014 Logo">
-          <a href="../../coming-soon.html">
+          <a href="./vendimia.html">
             <div class="info">
-              <h2>Festival Nacional de la Vendimia</h2>
+              <h2>Fiesta Nacional de la Vendimia 2014</h2>
               <h3>Logotipo</h3>
             </div>
           </a>
