--- a/pages/packaging/packaging.html
+++ b/pages/packaging/packaging.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="../logo/logo.html">Logo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page"" href="./packaging.html">Packaging</a>
+                <a class="nav-link active" aria-current="page" href="./packaging.html">Packaging</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../print/print.html">Print</a>
@@ -77,9 +77,9 @@
         </a>
       </div>
         <div class="miniatura"><img class="grid-img-4" src="../../multimedia/buonob/buonob.jpg" alt="Buono B">
-          <a href="../../coming-soon.html">
+          <a href="./buonob.html">
             <div class="info">
-              <h2>Buono B</h2>
+              <h2>Buono B.</h2>
               <h3>Packaging</h3>
           </div>
         </a>
