--- a/pages/print/print.html
+++ b/pages/print/print.html
@@ -53,7 +53,7 @@
   </div>
   <div class="contenedor-grid-print">
         <div class="miniatura"><img class="grid-img-1" src="../../multimedia/rplnish/rplnish.jpg" alt="Rplnish">
-          <a href="../../coming-soon.html">
+          <a href="./rplanish.html">
             <div class="info">
               <h2>Rpln!sh</h2>
               <h3>Print</h3>
