--- a/pages/print/rplanish.html
+++ b/pages/print/rplanish.html
@@ -52,23 +52,23 @@
         <h3>for Brainding studio</h3>
         <p>Style guide for RPLN!SH, a brand dedicated to the production of energy drinks.<br>
           Guidelines for the application of the brand in electronic and printed media.</p>
-        <img src="../../multimedia/rplnish/RPLnish_01.jpg" alt="Brandguide for Replanish">
-        <img src="../../multimedia/rplnish/RPLnish_02.jpg" alt="Brandguide for Replanish">
-        <img src="../../multimedia/rplnish/RPLnish_03.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_04.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_05.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_06.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_07.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_08.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_09.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_10.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_11.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_12.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_13.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_14.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_15.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_16.jpg" alt="Brandguide for Replanish"> 
-        <img src="../../multimedia/rplnish/RPLnish_17.jpg" alt="Brandguide for Replanish"> 
+        <img src="../../multimedia/rplnish/rplnish_01.jpg" alt="Brandguide Cover">
+        <img src="../../multimedia/rplnish/rplnish_02.jpg" alt="Brandguide Summary">
+        <img src="../../multimedia/rplnish/rplnish_03.jpg" alt="01 The Logo"> 
+        <img src="../../multimedia/rplnish/rplnish_04.jpg" alt="Rplnish Logo"> 
+        <img src="../../multimedia/rplnish/rplnish_05.jpg" alt="02 Typography"> 
+        <img src="../../multimedia/rplnish/rplnish_06.jpg" alt="Univers Condensed Oblique"> 
+        <img src="../../multimedia/rplnish/rplnish_07.jpg" alt="03 The Colors"> 
+        <img src="../../multimedia/rplnish/rplnish_08.jpg" alt="Brand Colors percentages"> 
+        <img src="../../multimedia/rplnish/rplnish_09.jpg" alt="04 Digital & Print"> 
+        <img src="../../multimedia/rplnish/rplnish_10.jpg" alt="Bottle Labels"> 
+        <img src="../../multimedia/rplnish/rplnish_11.jpg" alt="Logo grid"> 
+        <img src="../../multimedia/rplnish/rplnish_12.jpg" alt="Magazine Ad"> 
+        <img src="../../multimedia/rplnish/rplnish_13.jpg" alt="Facebook"> 
+        <img src="../../multimedia/rplnish/rplnish_14.jpg" alt="05 Imagery"> 
+        <img src="../../multimedia/rplnish/rplnish_15.jpg" alt="Black and White images"> 
+        <img src="../../multimedia/rplnish/rplnish_16.jpg" alt="Diagonal composition"> 
+        <img src="../../multimedia/rplnish/rplnish_17.jpg" alt="Back cover"> 
     </div>
   </main>
   <!--Pie de pagina-->
