--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </a>
         </div>
         <div class="miniatura"><img class="grid-img-2" src="multimedia/rplnish/rplnish.jpg" alt="Rplnish Print">
-          <a href="./pages/print/rplanish.html">
+          <a href="./pages/print/rplnish.html">
             <div class="info">
             <h2>Rpln!sh</h2>
             <h3>Print</h3>
